--- a/src/main/resources/application-oauth.properties
+++ b/src/main/resources/application-oauth.properties
@@ -1,3 +1,21 @@
 spring.security.oauth2.client.registration.google.client-id=443345017608-cp7m53gjj36t1q22tuh26v3r1s0vj9tj.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=yE8wXiiTZjzlf5r2CW9rq3BW
 spring.security.oauth2.client.registration.google.scope=profile,email
+
+#registration
+spring.security.oauth2.client.registration.naver.client-id=zsPSl0xlkP_FfyWmoenl
+spring.security.oauth2.client.registration.naver.client-secret=Br6vADVlcu
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=name,email,profile_image
+spring.security.oauth2.client.registration.naver.client-name=Naver 
+
+# provider
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
+
+###네이버 회원 조회시 resultcode, message, response 이렇게 3개의 필드가 날라오고
+##response 안에 회원 정보가 들어있기 때문에 user-name-attribute = response로 지정해줘야 함.
+
